--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "preseeds": "node seeds/create-db.js",
-    "seeds": "node seeds/index.js"
+    "seeds": "node seeds/seed.js"
   },
   "keywords": [],
   "author": "",
