--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
+    "ordinal": "^1.0.3",
     "sequelize": "^6.3.5"
   }
 }
